--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="https://www.freshfarm.org/recipes/friday-night-pizza?gclid=EAIaIQobChMIycyNydHU_AIVIiStBh013AGcEAAYBCAAEgIBE_D_BwE">Pizza Recipe</a>
 </body>
 </html>
