--- a/index.html
+++ b/index.html
@@ -7,7 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="https://www.freshfarm.org/recipes/friday-night-pizza?gclid=EAIaIQobChMIycyNydHU_AIVIiStBh013AGcEAAYBCAAEgIBE_D_BwE">Pizza Recipe</a>
+<h1>Odin Recipes</h1>
+<img src="images/pizza.jpg" alt="">
+<h2>Pepperoni Pizza Recipe</h2>
+<p>This recipe will help you create a delicious Pepperoni Pizza from the scraps in your own kitchen.  It is my favorite kind of pizza and the worlds most popular</p>
+<a href="https://www.freshfarm.org/recipes/friday-night-pizza?gclid=EAIaIQobChMIycyNydHU_AIVIiStBh013AGcEAAYBCAAEgIBE_D_BwE">Pizza Recipe</a>
+<h3>Ingrediants</h3>
+<ul>
+
+    <li>1 tablespoon active dry yeast</li>
+    <li>1 teaspoon sugar or honey</li>
+    <li>1 1/2 cups warm (110° to 115°) water</li>
+    <li>3 tablespoons olive oil</li>
+    <li>1 teaspoon salt</li>
+    <li>2 1/2 cups all-purpose flour</li>
+    <li>2 cups whole-wheat flour</li>
+    <li>1 cup sliced onions</li>
+    <li>olive oil</li>
+    <li>water</li>
+    <li>2 bell peppers, cut into thin strips</li>
+    <li>16 ounces mozzarella, grated</li>
+    <li>2 cups fresh tomatoes in season (or tomato sauce)</li>
+    <li>toppings such as sliced tomatoes, fresh basil, sliced mushrooms, crumbled feta</li>
+    <li>cheese or finely chopped spinach or chard</li>
+    <li>1 tablespoon minced fresh oregano</li>
+    <li>1 teaspoon minced fresh rosemary</li>
+<h3>Steps</h3>
+<ol>
+    <li>Prepare Crust</li>
+    <li>In separate bowl, mix flours together. Add them to liquid mixture, stirring first and then kneading to incorporate. Let dough rise 30-40 minutes. While dough is rising, saute sliced onions in a pan over medium heat with a little olive oil to caramelize their sugars. Cook until transparent but not browned. Reduce heat, add a little water to prevent browning, and let cook another 10 to 15 minutes until glossy and sweet. Add sliced peppers and cook 5-10 more minutes.</li>
+    <li>Once dough has risen, preheat oven to 425°. Divide dough in half. On clean, floured surface, roll out two round, 12 in. pizza crusts, using fingers to roll the perimeter into an outer crust edge as thick as you like. Using a spatula, slide crusts onto well- floured pans or baking stones. If using fresh tomatoes, layer cheese evenly over crust, then scatter your favorite toppings on top, finishing with the herbs. If using tomato sauce, spread over crust, top with cheese and then other toppings.</li>
+    <li>Bake pizzas in preheated oven for 15 to 20 minutes, until crust is brown and crisp.</li>
+</ol>
+</ul>
 </body>
 </html>
