updated several files that were previously not part of the commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 <body>
 <h1>Odin Recipes</h1>
 <img src="images/jellypizza.jpg" alt="">
+<h2>A pizza Extravaganza!</h2>
 <p>
 <a href="./recipes/pizza.html">pizza</a>
+</p>
+<p>
+    <a href="./recipes/candypizza.html">Candypizza</a>
+</p>
+<p>
+    <a href="./recipes/rasspizza.html">Rassberry Pizza</a>
 </p>
 </body>
 </html>
