--- a/recipes/candypizza.html
+++ b/recipes/candypizza.html
@@ -10,6 +10,24 @@
     <h1>Candy Pizza</h1>
     <img src="candypizza.jpg" alt="">
     <p>This candy bar cookie pizza will use up some of that candy for you.  And trust me, it is way better than just eating the leftover Halloween candy by itself.  A gooey chocolate chip cookie that is topped with a mixture of melted chocolate and peanut butter.  Then you sprinkle on whatever your favorite candy is.</p>
-
+<h3>Ingrediants</h3>
+<ul>
+    <li>1 batch chocolate chip cookie dough, (homemade or store bought)</li>
+    <li>3/4 cup semi-sweet chocolate chips</li>
+    <li>1/3 cup peanut butter</li>
+    <li>1 1/2 cups candy, , chopped (whatever you like)</li>
+<h3>Steps</h3>
+<ol>
+    <li>Preheat oven to 350 degrees</li>
+    <li>Spread cookie dough in a 10 inch spring form pan (or a 9 inch baking dish)</li>
+    <li>Bake for 10-15 minutes until edges are golden, and the center is set. Do not over bake, it will continue to cook after you remove it from the oven.</li>
+    <li>Let cook for 10 minutes.</li>
+    <li>In a microwave safe bowl melt chocolate chips and peanut butter together until smooth.</li>
+    <li>Pour over cookie. Spread in an even layer.</li>
+    <li>Immediately sprinkle chopped candy over the cookie.</li>
+    <li>Let cool for at least 10 minutes before slicing. If will be very messy unless you let the chocolate set completely.</li>
+    
+</ol>
+</ul>
 </body>
 </html>
