Changed the source of the images and corrected the corosponding code

--- a/recipes/rasspizza.html
+++ b/recipes/rasspizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Raspberry-Mascarpone Pizza</h1>
-    <img src="rasspizz.jpg" alt="">
+    <img src="../images/rasspizz.jpg" alt="">
     <p>A delicious, refreshing dessert pizza made with fresh raspberries and airy, light mascarpone cheese.</p>
     <h2>Ingrediants</h2>
     <ul>
