--- a/recipes/candypizza.html
+++ b/recipes/candypizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Candy Pizza</h1>
-    <img src="candypizza.jpg" alt="">
+    <img src="../images/candypizza.jpg" alt="">
     <p>This candy bar cookie pizza will use up some of that candy for you.  And trust me, it is way better than just eating the leftover Halloween candy by itself.  A gooey chocolate chip cookie that is topped with a mixture of melted chocolate and peanut butter.  Then you sprinkle on whatever your favorite candy is.</p>
 <h3>Ingrediants</h3>
 <ul>
