--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="pizza.jpg" alt="">
+    <img src="../images/pizza.jpg" alt="">
 <h2>Pepperoni Pizza Recipe</h2>
 <p>This recipe will help you create a delicious Pepperoni Pizza from the scraps in your own kitchen.  It is my favorite kind of pizza and the worlds most popular</p>
 
